feat: improve farm and producer management
